--- a/hw-5/app/View/blog.phtml
+++ b/hw-5/app/View/blog.phtml
@@ -52,4 +52,7 @@ $user = $this->user;
 <?php else: ?>
     There are no messages so far <br>
 <?php endif; ?>
+
 </div>
+<?php
+require 'footer.twig';
