--- a/hw-5/app/View/signin.phtml
+++ b/hw-5/app/View/signin.phtml
@@ -37,7 +37,9 @@ $user = $this->user;
 <? else: ?>
     You are signed in as <?=$user->getName();?>
 <? endif; ?>
+
 </div>
+<?php require 'footer.twig';
+?>
 </body>
-</head>
 </html>
