--- a/hw-5/app/View/footer.twig
+++ b/hw-5/app/View/footer.twig
@@ -1,6 +1,6 @@
 <style>
-    .container {text-align: center; padding: 20px}
+    .wrapper {text-align: center; padding: 20px}
 </style>
-<div class="container">
+<div class="wrapper">
     Copyright 2021 Loftschool. All rights reserved.
 </div>
